# Wan2.1-fork

./: CLAUDE.md  pyproject.toml
experiments/: extract_attention.sh  extract_attention_wan.py  extraction_log.txt  run_extraction_each.py  run_extraction_figure4.py  run_extraction_full_attention.py  script_extract_0_29.sh
notebooks/: extract_all_attention.ipynb  plt_cross.ipynb  plt_fig4.ipynb
wan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wan/modules/: attention.py
